--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  on_audio_query:
+    path: ./on_audio_query
   just_audio: ^0.10.4
   audio_session: ^0.2.2
   audio_service: ^0.18.18
@@ -18,24 +20,22 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
   audio_info: ^0.0.3
-  on_audio_query: ^2.9.0
   marquee: ^2.3.0
   share_plus: ^11.0.0
   cross_file: ^0.3.4+2
   http: ^1.4.0
   palette_generator: ^0.3.3+7
   youtube_explode_dart: ^2.4.2
-  device_info_plus: ^11.4.0
   file_selector: ^1.0.3
   audiotags: ^1.4.5
   url_launcher: ^6.3.1
-  ffmpeg_kit_flutter_new: ^1.6.1
+  ffmpeg_kit_flutter_new: ^2.0.0
   media_scanner: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.14.4
 
 flutter:
