--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   url_launcher: ^6.3.1
   ffmpeg_kit_flutter_new: ^2.0.0
   media_scanner: ^2.2.0
+  device_info_plus: ^11.5.0
 
 dev_dependencies:
   flutter_test:
