--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   marquee: ^2.3.0
   share_plus: ^11.0.0
   cross_file: ^0.3.4+2
+  connectivity_plus: ^6.1.4
   http: ^1.4.0
   youtube_explode_dart:
     git:
@@ -39,7 +40,6 @@ dependencies:
   image: ^4.5.4
   android_intent_plus: ^5.3.0
   package_info_plus: ^8.3.0
-  palette_generator: ^0.3.3+7
   ota_update: ^7.0.2
   scroll_to_index: ^3.0.1
 
