--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,7 +31,7 @@ android {
         versionName = flutter.versionName
 
         ndk {
-            abiFilters.add("x86_64")
+            abiFilters.add("armeabi-v7a")
         }
     }
 
