--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: music
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.3.2+1
+version: 1.3.3+1
 
 environment:
   sdk: ^3.8.1
@@ -13,7 +13,7 @@ dependencies:
     path: ./on_audio_query
   just_audio: ^0.10.4
   audio_session: ^0.2.2
-  audio_service: ^0.18.17
+  audio_service: ^0.18.18
   path: ^1.9.1
   sqflite: ^2.4.2
   shared_preferences: ^2.5.3
@@ -36,13 +36,14 @@ dependencies:
   media_scanner: ^2.2.0
   device_info_plus: ^11.5.0
   dio: ^5.8.0+1
+  open_file: ^3.5.10
   smooth_page_indicator: ^1.2.1
   image: ^4.5.4
   android_intent_plus: ^5.3.0
   package_info_plus: ^8.3.0
   ota_update: ^7.0.2
   scroll_to_index: ^3.0.1
-
+  mini_music_visualizer: ^1.1.4
 
 dev_dependencies:
   flutter_test:
