--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: music
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.4.0+1
+version: 1.4.1+1
 
 environment:
   sdk: ^3.8.1
@@ -44,6 +44,8 @@ dependencies:
   ota_update: ^7.0.2
   scroll_to_index: ^3.0.1
   mini_music_visualizer: ^1.1.4
+  flutter_local_notifications: ^19.3.1
+  animations: ^2.0.11
 
 dev_dependencies:
   flutter_test:
