--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: music
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.4.1+1
+version: 1.4.2+1
 
 environment:
   sdk: ^3.8.1
@@ -9,13 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   on_audio_query:
     path: ./on_audio_query
   just_audio: ^0.10.4
   audio_session: ^0.2.2
   audio_service: ^0.18.18
   path: ^1.9.1
-  sqflite: ^2.4.2
   shared_preferences: ^2.5.3
   path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
@@ -45,13 +46,14 @@ dependencies:
   scroll_to_index: ^3.0.1
   mini_music_visualizer: ^1.1.4
   flutter_local_notifications: ^19.3.1
-  animations: ^2.0.11
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.14.4
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
