--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: music
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.4.7+1
+version: 1.4.8+1
 
 environment:
   sdk: ^3.8.1
@@ -22,10 +22,10 @@ dependencies:
   permission_handler: ^12.0.1
   audio_info: ^0.0.3
   marquee: ^2.3.0
-  share_plus: ^11.0.0
+  share_plus: ^11.1.0
   cross_file: ^0.3.4+2
-  connectivity_plus: ^6.1.4
-  http: ^1.4.0
+  connectivity_plus: ^6.1.5
+  http: ^1.5.0
   youtube_explode_dart:
     git:
       url: https://github.com/anandnet/youtube_explode_dart.git
@@ -35,16 +35,17 @@ dependencies:
   url_launcher: ^6.3.1
   media_scanner: ^2.2.0
   device_info_plus: ^11.5.0
-  dio: ^5.8.0+1
+  dio: ^5.9.0
   open_file: ^3.5.10
   smooth_page_indicator: ^1.2.1
   image: ^4.5.4
   android_intent_plus: ^5.3.0
-  package_info_plus: ^8.3.0
+  package_info_plus: ^8.3.1
   ota_update: ^7.0.2
   scroll_to_index: ^3.0.1
   mini_music_visualizer: ^1.1.4
-  flutter_local_notifications: ^19.3.1
+  flutter_local_notifications: ^19.4.0
+  squiggly_slider: ^1.0.5
 
 dev_dependencies:
   flutter_test:
