--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: music
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.4.11+1
+version: 1.5.0+1
 
 environment:
   sdk: ^3.8.1
@@ -21,7 +21,6 @@ dependencies:
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
   audio_info: ^0.0.3
-  marquee: ^2.3.0
   share_plus: ^11.1.0
   cross_file: ^0.3.4+2
   connectivity_plus: ^6.1.5
@@ -47,6 +46,8 @@ dependencies:
   flutter_local_notifications: ^19.4.1
   squiggly_slider: ^1.0.5
   flutter_svg: ^2.2.0
+  flutter_audio_toolkit: ^1.0.0
+  fading_edge_scrollview: ^4.1.1
 
 dev_dependencies:
   flutter_test:
