--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: music
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.5.0+1
+version: 1.5.1+1
 
 environment:
   sdk: ^3.8.1
@@ -13,7 +13,7 @@ dependencies:
   hive_flutter: ^1.1.0
   on_audio_query:
     path: ./on_audio_query
-  just_audio: ^0.10.4
+  just_audio: ^0.10.5
   audio_session: ^0.2.2
   audio_service: ^0.18.18
   path: ^1.9.1
@@ -23,7 +23,7 @@ dependencies:
   audio_info: ^0.0.3
   share_plus: ^11.1.0
   cross_file: ^0.3.4+2
-  connectivity_plus: ^6.1.5
+  connectivity_plus: ^7.0.0
   http: ^1.5.0
   youtube_explode_dart:
     git:
@@ -33,21 +33,24 @@ dependencies:
   audiotags: ^1.4.5
   url_launcher: ^6.3.1
   media_scanner: ^2.2.0
-  device_info_plus: ^11.5.0
+  device_info_plus: ^12.1.0
   dio: ^5.9.0
   open_file: ^3.5.10
   smooth_page_indicator: ^1.2.1
   image: ^4.5.4
   android_intent_plus: ^5.3.0
-  package_info_plus: ^8.3.1
+  package_info_plus: ^9.0.0
   ota_update: ^7.0.2
   scroll_to_index: ^3.0.1
   mini_music_visualizer: ^1.1.4
-  flutter_local_notifications: ^19.4.1
+  flutter_local_notifications: ^19.4.2
   squiggly_slider: ^1.0.5
   flutter_svg: ^2.2.0
   flutter_audio_toolkit: ^1.0.0
   fading_edge_scrollview: ^4.1.1
+  sqflite: ^2.4.2
+  icons_plus: ^5.0.0
+  material_symbols_icons: ^4.2873.0
 
 dev_dependencies:
   flutter_test:
