--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: music
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.5.1+1
+version: 1.5.2+1
 
 environment:
   sdk: ^3.8.1
@@ -44,13 +44,13 @@ dependencies:
   scroll_to_index: ^3.0.1
   mini_music_visualizer: ^1.1.4
   flutter_local_notifications: ^19.4.2
-  squiggly_slider: ^1.0.5
   flutter_svg: ^2.2.0
   flutter_audio_toolkit: ^1.0.0
   fading_edge_scrollview: ^4.1.1
   sqflite: ^2.4.2
   icons_plus: ^5.0.0
   material_symbols_icons: ^4.2873.0
+  audio_visualizer: ^1.1.0
 
 dev_dependencies:
   flutter_test:
