--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: music
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.5.5+1
+version: 1.5.6+1
 
 environment:
   sdk: ^3.8.1
@@ -20,7 +20,7 @@ dependencies:
   shared_preferences: ^2.5.3
   path_provider: ^2.1.5
   permission_handler: ^12.0.1
-  audio_info: ^0.0.3
+# audio_info: ^0.0.3  # Temporalmente comentado por incompatibilidad con Java 17
   share_plus: ^11.1.0
   cross_file: ^0.3.4+2
   connectivity_plus: ^7.0.0
@@ -49,7 +49,7 @@ dependencies:
   fading_edge_scrollview: ^4.1.1
   sqflite: ^2.4.2
   icons_plus: ^5.0.0
-  material_symbols_icons: ^4.2873.0
+  material_symbols_icons: ^4.2874.0
   audio_visualizer: ^1.1.0
   dynamic_color: ^1.8.1
   flutter_sharing_intent: ^1.1.1
