--- a/on_audio_query/example/android/local.properties
+++ b/on_audio_query/example/android/local.properties
@@ -1,3 +1,3 @@
-sdk.dir=C:\\Users\\Kirby\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=C:\\Users\\kirby\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\rsc\\flutter
 flutter.buildMode=debug
