--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: music
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.7.0+4005
+version: 1.7.1+4006
 
 environment:
   sdk: ^3.8.1
@@ -57,6 +57,7 @@ dependencies:
   flutter_sharing_intent: ^1.1.1
   like_button: ^2.1.0
   translator: ^1.0.4+1
+  buttons_tabbar: ^1.3.15
 
 dev_dependencies:
   flutter_test:
