--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   translator: ^1.0.4+1
   buttons_tabbar: ^1.3.15
   image: ^4.7.2
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
