--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: music
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.7.3+4008
+version: 1.7.4+4009
 
 environment:
   sdk: ^3.8.1
@@ -56,6 +56,7 @@ dependencies:
   buttons_tabbar: ^1.3.15
   image: ^4.7.2
   cached_network_image: ^3.4.1
+  material_loading_indicator: ^1.0.0
 
 dev_dependencies:
   flutter_test:
